--- a/_data/advisories.yaml
+++ b/_data/advisories.yaml
@@ -4,8 +4,8 @@
 
 
 # Define Advisory texts
-# can be used in page frontmatter, e.g.:
-#       advisory: experimental
+# can be used in page frontmatter:
+#       advisory = "experimental"
 
 texts:
   experimental: "The functionality described on this page is marked as Experimental, and as such, may change before it becomes generally available."
@@ -17,7 +17,6 @@ texts:
   swarm: "See [Swarm mode overview](/engine/swarm/) for the orchestration features introduced in Docker Engine 1.12. Only refer to the Docker Swarm documents below for information on the standalone Swarm product."
   swarm-standalone: "**You are viewing docs for legacy standalone Swarm.** These topics describe standalone Docker Swarm. In Docker 1.12 and higher, [Swarm mode](/engine/swarm/) is integrated with Docker Engine. Most users should use integrated Swarm mode &#8212; a good place to start is [Getting started with swarm mode](/engine/swarm/swarm-tutorial/), [Swarm mode CLI commands](/engine/swarm/index.md#swarm-mode-cli-commands), and the advanced [Learn Docker sample app](/engine/getstarted-voting-app/). Standalone Docker Swarm is not integrated into the Docker Engine API and CLI commands."
   engine: "This site contains documentation for the v1.12 release candidate version of Docker Engine. For the Docker Engine v1.11 docs, see [https://docs.docker.com/v1.11/](https://docs.docker.com/v1.11/). Docker for Mac and Docker for Windows are currently in Beta."
-  cloud-swarm: "**Beta Feature.** Swarm Mode for Docker Cloud is currently a public Beta."
 
 
 # URL based advisories
